[main] Finish first weather API request
on branch [main]
