# public/swagger.json
@@ -17,6 +17,61 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"WeatherForUserSpecifiedCity": {
+				"properties": {
+					"shortDescription": {
+						"type": "string"
+					},
+					"longerDescription": {
+						"type": "string"
+					},
+					"temperature": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"shortDescription",
+					"longerDescription",
+					"temperature"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"UserResponse": {
+				"properties": {
+					"message": {
+						"anyOf": [
+							{
+								"type": "string"
+							},
+							{
+								"$ref": "#/components/schemas/WeatherForUserSpecifiedCity"
+							}
+						]
+					},
+					"successful": {
+						"type": "boolean"
+					}
+				},
+				"required": [
+					"message",
+					"successful"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"UserMessage": {
+				"properties": {
+					"text": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"text"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -33,7 +88,7 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/virtualAgent/greeting": {
+		"/api/virtualAgent/greeting": {
 			"get": {
 				"operationId": "GetGreeting",
 				"responses": {
@@ -51,11 +106,40 @@
 				"security": [],
 				"parameters": []
 			}
+		},
+		"/api/userResponse/message": {
+			"post": {
+				"operationId": "UserChosenCityResponse",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/UserResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UserMessage"
+							}
+						}
+					}
+				}
+			}
 		}
 	},
 	"servers": [
 		{
-			"url": "localhost:8000/"
+			"url": "/"
 		}
 	]
 }
